Bug 1303755 - Flash code using GetKeyState crashes attempting IPC from non-main thread. r=jimm, a=gchang

On Windows, when not already running on the main thread, post GetKeyState calls to main thread and wait for result with a semaphore.